# SI-Course-Repo

./: .gitignore  LICENSE  README.md  package-lock.json
00._Miscellaneous/: base64_encoded_images.html  stripeiframe.html  youtubevideoembedded.html
02._Data_Formats/: me.csv  me.txt  me.xml
02._Data_Formats/encoding/dotnet_decoder/: Decoder.cs  (+1 more)
04._Basic_Servers/dotnet/: FileParser.cs  Person.cs  Program.cs  dotnet.csproj
04._Basic_Servers/files/: me.csv  me.xml
04._Basic_Servers/node/: app.js  fileParser.js  package.json
04._Basic_Servers/python/: file_parser.py  main.py  pyproject.toml
06._Server_To_Server/node/: app.js
06._Server_To_Server/python/: main.py  pyproject.toml
07._Dotenv/node/: .env_sample  index.js  package.json
07._Dotenv/python/: pyproject.toml
08._Database_Documentation/: mydb_mro_docs.html
09._OpenAPI/node/: app.js
09._OpenAPI/python/: main.py
12._Server-Sent-Events/node/: app.js
12._Server-Sent-Events/python/: main.py  pyproject.toml
13._Github_Webhooks/mandatory_1_part_2/: webhooks.json
13._Github_Webhooks/mandatory_1_part_2_integrator/: registerEndpoint.js  unregisterEndpoint.js
13._Github_Webhooks/node/: app.js  package.json
13._Github_Webhooks/python/: main.py  pyproject.toml
15._WebSockets/node/: server.js
16._CORS/: index.html
17._multipart-forms/python/: pyproject.toml
18._Webscraping/mandatory_2_part_2/: index.html  index.js  package-lock.json  package.json
18._Webscraping/node/: index.js
20._sqlite/python/: pyproject.toml
SMS_Integration/node/: index.js
Web_Crawler/python/: main.py
(+32 files in other folders)
