[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Julius Stenbæk Christoffersen <julius@adnudging.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
